# pywebexercises

./: .nojekyll  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  _quarto.yml  environment.yaml  index.html  index.qmd  lint.sh  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: lint.yaml  quarto_publish.yaml
assets/: webex.css
docs/: .gitignore  index.qmd  mcq.html  mcq.qmd
docs/pages/: exercises.qmd  setup.qmd
pages/: exercises.html  exercises.qmd  setup.html  setup.qmd
pywebexercises/: __init__.py  exercises.py  setup.py
site_libs/bootstrap/: bootstrap-c222e4bd8fbe1cd6fbac88fcc64b9992.min.css
src/pywebexercises/assets/: webex.css  webex.js
